@@ -4,28 +4,28 @@
 
 pkgname=nzbget
 pkgver=0.6.0
-pkgrel=1
+pkgrel=2
 pkgdesc="Downloads from Usenet using .nzb files."
 arch=('i686' 'x86_64')
 url="http://nzbget.sourceforge.net/"
 license=('GPL')
-depends=('ncurses' 'libpar2' 'libxml2')
+depends=('gnutls' 'libpar2' 'libxml2' 'ncurses')
 makedepends=('autoconf' 'automake')
 source=(http://downloads.sourceforge.net/$pkgname/$pkgname-$pkgver.tar.gz)
 
 md5sums=('eb95b3930abffb570e37af8d284c1f9d')
 
 build() {
-  cd "${srcdir}/$pkgname-$pkgver"
+  cd ${srcdir}/$pkgname-$pkgver
 
 #  autoreconf -fi || return 1
 #uudeview ("uulib") has been removed, and "it did not work well anyway"
   ./configure --prefix=/usr --enable-parcheck || return 1
   make || return 1
-  make DESTDIR="${pkgdir}" install
+  make DESTDIR=${pkgdir} install
 
 #other files
-  install -d "${pkgdir}/usr/share/$pkgname"
-  install -m644 -t "${pkgdir}/usr/share/$pkgname" \
-    "AUTHORS" "ChangeLog" "nzbget.conf.example" "README" || return 1
+  install -d ${pkgdir}/usr/share/$pkgname
+  install -m644 -t ${pkgdir}/usr/share/$pkgname \
+    AUTHORS ChangeLog nzbget.conf.example README || return 1
 }
